--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav class="purple darken-4 accent-3" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">University of Gondar</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
       </ul>
