--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav class="purple darken-4 accent-3" role="navigation">
+  <nav class="light-blue.accent-1" role="navigation">
     <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">University of Gondar</a>
       <ul class="right hide-on-med-and-down">
         <li><a href="#">Navbar Link</a></li>
