--- a/templates/home.html
+++ b/templates/home.html
@@ -30,7 +30,7 @@
       <br><br>
       <h1 class="header center red-text">Cervical Cancer Prediction</h1>
       <div class="row center">
-        <h5 class="header col s12 light black-text">Predict the Risk of Geting Cervical Cancer!
+        <h5 class="header col s12 light black-text">Using Machine Learning Technique!
         <br>
         </h5>
       </div>
