--- a/templates/home.html
+++ b/templates/home.html
@@ -11,10 +11,10 @@
 </head>
 
 <body>
-  <nav class="light-blue.accent-1" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">University of Gondar</a>
+  <nav class="purple darken-4 accent-3" role="navigation">
+    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">Navbar Link</a></li>
+        <li><a href="#">About Us</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -28,7 +28,7 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
       <br><br>
-      <h1 class="header center red-text">Cervical Cancer Prediction</h1>
+      <h1 class="header center blue-text">Cervical Cancer Prediction</h1>
       <div class="row center">
         <h5 class="header col s12 light black-text">Using Machine Learning Technique!
         <br>
@@ -50,7 +50,7 @@
             <input id="_name" name="marital_status" placeholder="1 - Single/2 - Married/3 - Divorced/4 - Widowed" type="text" class="validate">
         </div>
           <div class="input-field col s4">
-            <label for="_name" style="font-size: 20px"><b>educational_status</b></label>
+            <label for="_name" style="font-size: 20px"><b>Educational_status</b></label>
             <br>
             <input id="_name" name="educational_status" placeholder="1 - Ilitrate/2 - Can Read and Write/3 - Elementary/4 - HIgh School/5 - Tertiary School" type="text" class="validate">
         </div>
@@ -93,21 +93,25 @@
 
       <div class="row center">
 
-          <button type="submit" class="btn-large waves-effect waves-light lamber lighten-1">Predict Probability</button>
+          <button type="submit" class="btn-large waves-effect waves-light lamber lighten-1"><strong>Predict</strong>
+              <h4 style="color:Tomato;">cancer(1)</h4>
+						<h4 style="color:DodgerBlue;">non cancer(0)</h4>
+          </button>
       </div>
     </form>
       </div>
-      <div class="dark-text">
+      
+    </div>
+  </div>
+    <div>
+<div>
+   <div class="dark-text">
       <br>
         <h4>{{pred}}</h4><br>
       </div>
-    </div>
-  </div>
-
-
     <br><br>
   </div>
-  </div>>
+  </div>
 
   <footer class="page-footer light-blue lighten-1">
     <div class="container">
@@ -115,7 +119,7 @@
         <div class="col l6 s12">
           <h5 class="white-text">Project Bio</h5>
           <p class="grey-text text-lighten-4">This Project is Submitted for the partial fullfilment of masters of science in computer science for college of informatics department of computer science
-            prepared by Kalkidan Asmare under advisation of Mr.Abebe Alemu(Ass.professor)</p>
+            prepared by Kalkidan Asmare under supervision of Mr.Abebe Alemu(Ass.professor)</p>
         </div>
         
         <div class="col l3 s12">
