--- a/templates/op.html
+++ b/templates/op.html
@@ -9,16 +9,51 @@
 
     <body>
         <nav class="blue darken-4 accent-3">
-            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">University of Gondar</a>
+            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
 
         </nav>
         <div class="section no-pad-bot" id="index-banner">
             <div class="container">
                 <br><br>
-                
+               
                 <h3>{{pred}}</h3>
             </div>
         </div>
-    </body>
+            
+            
+            
+             <footer class="page-footer light-blue lighten-1">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Project Bio</h5>
+          <p class="grey-text text-lighten-4">This Project is Submitted for the partial fullfilment of masters of science in computer science for college of informatics department of computer science
+            prepared by Kalkidan Asmare under supervision of Mr.Abebe Alemu(Ass.professor)</p>
+        </div>
+        
+        
+        <div class="col l3 s12">
+          <h5 class="white-text">Connect</h5>
+          <ul>
+            <li><a class="white-text" href="#!">LinkedIn</a></li>
+            <li><a class="white-text" href="https://github.com/KalAsmare">GitHub</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+      Made by <a class="orange-text text-lighten-3" href="https://github.com/KalAsmare">Kalkidan Asmare</a>
+      </div>
+    </div>
+  </footer>
 
+
+  <!--  Scripts-->
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="../static/js/materialize.js"></script>
+  <script src="js/init.js"></script>
+
+  </body>
 </html>
+    
