--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,9 @@
 
 <body>
   <nav class="purple darken-4 accent-3" role="navigation">
-    <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+    <div class="nav-wrapper container"><img src="C:\Users\kalas\PycharmProjects\MSC projects\A-Prediction-Project-in-Python-Flask-main\logo">
       <ul class="right hide-on-med-and-down">
-        <li><a href="#">About Us</a></li>
+        <li><img src="C:\Users\kalas\PycharmProjects\MSC projects\A-Prediction-Project-in-Python-Flask-main\cclogo"></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
@@ -123,19 +123,13 @@
         </div>
         
         <div class="col l3 s12">
-          <h5 class="white-text">Settings</h5>
-          <ul>
-            <li><a class="white-text" href="#!">Link 1</a></li>
-            <li><a class="white-text" href="#!">Link 2</a></li>
-            <li><a class="white-text" href="#!">Link 3</a></li>
-            <li><a class="white-text" href="#!">Link 4</a></li>
-          </ul>
+          <h5 class="white-text">Objective of The Project</h5>
+          <p class="grey-text text-lighten-4">The general objective of this project is to develop a predictive model for cervical cancer by using ensemble machine-learning techniques.</p>
         </div> 
         <div class="col l3 s12">
           <h5 class="white-text">Connect</h5>
           <ul>
-            <li><a class="white-text" href="#!">LinkedIn</a></li>
-            <li><a class="white-text" href="#!">GitHub</a></li>
+            <li><a class="white-text" href="https://github.com/KalAsmare">GitHub</a></li>
           </ul>
         </div>
       </div>
