--- a/templates/op.html
+++ b/templates/op.html
@@ -9,7 +9,7 @@
 
     <body>
         <nav class="blue darken-4 accent-3">
-            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">Logo</a>
+            <div class="nav-wrapper container"><a id="logo-container" href="#" class="brand-logo">CEVICAL CANCER RESULT</a>
 
         </nav>
         <div class="section no-pad-bot" id="index-banner">
@@ -26,18 +26,15 @@
     <div class="container">
       <div class="row">
         <div class="col l6 s12">
-          <h5 class="white-text">Project Bio</h5>
-          <p class="grey-text text-lighten-4">This Project is Submitted for the partial fullfilment of masters of science in computer science for college of informatics department of computer science
-            prepared by Kalkidan Asmare under supervision of Mr.Abebe Alemu(Ass.professor)</p>
+          <h5 class="white-text">Is cervical cancer preventable?</h5>
+          <p class="grey-text text-lighten-4">
+Yes, cervical cancer is preventable through regular screening tests, HPV vaccination, and lifestyle changes.</p>
         </div>
         
         
         <div class="col l3 s12">
-          <h5 class="white-text">Connect</h5>
-          <ul>
-            <li><a class="white-text" href="#!">LinkedIn</a></li>
-            <li><a class="white-text" href="https://github.com/KalAsmare">GitHub</a></li>
-          </ul>
+          <h5 class="white-text">Cervical cancer Prevention</h5>
+          <p class="grey-text text-lighten-4">The most important things you can do to help prevent cervical cancer are to get vaccinated against HPV, have regular screening tests, and go back to the doctor if your screening test results are not normal.</p>
         </div>
       </div>
     </div>
@@ -45,6 +42,11 @@
       <div class="container">
       Made by <a class="orange-text text-lighten-3" href="https://github.com/KalAsmare">Kalkidan Asmare</a>
       </div>
+         <div class="col l6 s12">
+          <h5 class="white-text">Project Bio</h5>
+          <p class="grey-text text-lighten-4">This Project is Submitted for the partial fullfilment of masters of science in computer science for college of informatics department of computer science
+            prepared by Kalkidan Asmare under supervision of Mr.Abebe Alemu(Ass.professor)</p>
+        </div>
     </div>
   </footer>
 
